--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build:lib": "vue-cli-service build --target lib --name index --dest lib packages/index.ts",
     "build:esm-bundle": "rollup --config ./build/rollup.config.js",
     "build:dev": "rollup --config ./build/rollup.config.dev.js",
-    "build:css": "npx gulp sass",
+    "build:css": "yarn gulp sass",
     "test:unit": "vue-cli-service test:unit",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -70,6 +70,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-minify-css": "^1.2.4",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^5.0.0",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
