--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "different-ui",
-  "version": "0.1.1-beta.1",
+  "version": "0.1.1-beta.2",
   "description": "A Component Library for Vue 3",
   "homepage": "https://github.com/yesmore/different-ui",
   "keywords": [
@@ -66,6 +66,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "babel-core": "^7.0.0-bridge.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
