--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,11 @@ on:
 
 jobs:
   build-and-test:
-    name: test on pushing
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x, 14.x]
+        node-version: [10.x, 12.x, 14.x]
         os: [windows-latest, macos-latest, ubuntu-latest]
 
     steps:
