--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "serve": "vue-cli-service serve",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "yarn docs:build && cd docs/.vuepress/dist && git add -A && git commit -m 'deploy' && git push -f git@github.com:yesmore/different-ui.git master:gh-pages",
+    "deploy": "yarn docs:build && cd docs/.vuepress/dist && git init && git add -A && git commit -m 'deploy' && git push -f git@github.com:yesmore/different-ui.git master:gh-pages",
     "build": "yarn build:clean && yarn build:lib && yarn build:esm-bundle && rimraf lib/demo.html && yarn build:css",
     "build:clean": "rimraf lib",
     "build:lib": "vue-cli-service build --target lib --name index --dest lib packages/index.ts",
     "build:esm-bundle": "rollup --config ./build/rollup.config.js",
     "build:dev": "rollup --config ./build/rollup.config.dev.js",
     "build:css": "yarn gulp sass",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "yarn build && yarn deploy",
     "test:unit": "vue-cli-service test:unit",
     "test:cov": "vue-cli-service test:unit --coverage",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
